<resources>
    <string name="app_name">Lost and Found
    </string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="enter_mail_address">Enter email address</string>
    <string name="lost_and_found">Lost and Found</string>
    <string name="welcome_in_our_app">Welcome in Our App</string>
    <string name="userCreatedSucessfully"> Your Account created</string>
    <string name="PleaseCheckEmail">Please Check Email</string>
    <string name="backgroundroundedeclipse">backgroundroundedeclipse</string>
    <string name="title_activity_t5__dashboard">t5_Dashboard</string>
    <string name="action_settings">Settings</string>

    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup.</string>
    <string name="reset_password">Reset password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="create_a_password">Create a password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="backbutton">Back</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="logout">Logout</string>
    <string name="I_Lost_Something">I Lost Something</string>
    <string name="I_found_something">I Found something</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="lostandfoundtext">LostandfoundText</string>
    <string name="logoutbutton">LogoutButton</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="app_image">App Image</string>
    <string name="messages">Messages</string>
    <!--    <string name="name_of_item">Name of item</string>-->
    <string name="type_of_item">Type of item</string>
    <string name="where_you_find_it">Where you find it</string>
    <string name="description_of_item">Description of Item</string>
    <string name="other">Date</string>
    <string name="addimage">AddImage</string>
    <string name="submitbutton">Submit </string>
    <string name="search">Search</string>
    <string name="name_of_found_item">Name of Found item</string>
    <string name="addfounitem">addfounitem</string>
    <string name="founitmimage">founItmImage</string>
    <string name="found_item_place">Found Item Place</string>
    <string name="found_item_description">Found item description</string>
    <string name="where_you_lost_it">Where you Lost it</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="name_of_item">Name of item</string>
    <string name="dummy">dummy</string>
    <string name="dummydes">dummydes</string>
    <string name="lost_items">Lost Items </string>
    <string name="found_items">Found Items </string>
    <string name="customercare">customercare</string>
    <string name="ratings">ratings</string>
    <string name="successfully">Successfully</string>
    <string name="your_item_uploaded">Your item uploaded</string>
    <string name="itemimage">itemimage</string>
    <string name="type_a_message">Type a message</string>
    <string name="textview">TextView</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="contact_number">Contact number</string>
    <string name="place">Place</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="descroiption">descroiption</string>
    <string name="itemname">Itemname</string>
    <string name="send_message">Send Message</string>
    <string name="item_details">Item Details</string>
    <string name="user">user</string>
    <string name="you_uploaded_this_item">You uploaded this Item</string>
    <string name="search_user">Search user…</string>
    <string name="useimage">useimage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">hello</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="userprofileimage">Userprofileimage</string>
    <string name="account_detail">Account Detail</string>
    <string name="loading">______</string>
    <string name="loadingphnnumber">________</string>
    <string name="upload_lost_item">Upload Lost Item</string>
    <string name="upload_found_item">Upload Found Item</string>
    <string name="upload">Upload</string>
    <string name="type_here">type here</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_date">Enter date</string>
    <string name="select_date">Select date</string>
</resources>