<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/accounticon_24"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_lost"
            android:icon="@drawable/losticon"
            android:title="@string/lost" />
        <item
            android:id="@+id/nav_found"
            android:icon="@drawable/foundicon"
            android:title="@string/found" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/logouthomescreen"
            android:title="@string/logout" />
    </group>
</menu>