<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_foundbar"
        android:name="com.example.myapplication.ui.found.foundFragment"
        android:label="@string/found"
        tools:layout="@layout/found_fragment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_lostbar"
        android:name="com.example.myapplication.ui.lost.lostFragment"
        android:label="@string/lost"
        tools:layout="@layout/lost_fragment" />

    <fragment
        android:id="@+id/nav_myaccountbar"
        android:name="com.example.myapplication.ui.myaccount.myAccountFragment"
        android:label="@string/my_account"
        tools:layout="@layout/my_account_fragment" />
</navigation>