<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".t7_I_found_something"
    android:background="@drawable/backgroundhomescreen"
    >

    <ImageButton
        android:id="@+id/ifoundsomethinghead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/I_found_something"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ifoundsomethingheadtext" />

    <ImageButton
        android:id="@+id/backbutfound"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/backbutton"
        app:layout_constraintEnd_toStartOf="@+id/ifoundsomethinghead"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbut" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ifoundsomethinghead"
        app:layout_constraintVertical_bias="0.133">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/addimage"
            android:contentDescription="@string/addimage" />

        <EditText
            android:id="@+id/nameofitem"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/name_of_item"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C"
            />

        <EditText
            android:id="@+id/typeofitem"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/type_of_item"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:autofillHints=""
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C"
            />

        <EditText
            android:id="@+id/place"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/where_you_find_it"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:autofillHints=""
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C"
            />

        <EditText
            android:id="@+id/descriptionofitem"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/description_of_item"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:autofillHints=""
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C"
            />

        <EditText
            android:id="@+id/other"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/other"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:autofillHints=""
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/submitbutton"
            android:textColor="#455D5C"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            android:layout_marginTop="30dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>