<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp"
    android:id="@+id/card"
    app:cardBackgroundColor="@color/white">
    <LinearLayout
        android:id="@+id/mainlineaarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/imageofitem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/itemimage"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameofitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name_of_item"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateofitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/placeofitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/desofitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/descroiption"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>