<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".t7lost.t7_2_Upload_lost_item"
    android:background="@drawable/backgroundhomescreen"
    >

    <ImageButton
        android:id="@+id/ilostsomethingheadtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/I_Lost_Something"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ilostsomethingheadtext" />

    <ImageButton
        android:id="@+id/backtodash"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/backbutton"
        app:layout_constraintEnd_toStartOf="@+id/ilostsomethingheadtext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbut" />

    <LinearLayout
        android:id="@+id/lostlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilostsomethingheadtext"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addfoundimgpreview"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/addimage"
                app:srcCompat="@drawable/addimage" />

            <Button
                android:id="@+id/selectlostimagebut"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/select_image"
                android:textColor="@color/themecolor"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />


        </LinearLayout>


        <EditText
            android:id="@+id/nameoflostitem"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/name_of_item"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C" />

        <EditText
            android:id="@+id/lostplace"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/where_you_lost_it"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C" />

        <EditText
            android:id="@+id/descriptionoflostitem"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/description_of_item"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C" />

        <EditText
            android:id="@+id/lostdate"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/other"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C" />

        <EditText
            android:id="@+id/phn"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/backgrountedittext"
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="number"
            android:padding="15dp"
            android:shadowColor="#000000"
            android:textColor="@color/themecolor"
            android:textColorHint="#A4455D5C" />

        <Button
            android:id="@+id/lostsubmitbut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:text="@string/submitbutton"
            android:textColor="#455D5C"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>